Sigil vNEXT DATE_TBA
    - Fix issue 959: Original creator's name is mangled in About dialog.

Sigil v0.4.0 2011.08.15
    - Fix issue 650: Convert SVG prefixes into a form that Tidy will tolerate.
    - Fix issue 952: Allow compatible extension changes.
    - Fix issue 835: File, Close shortcut does not work on OS X due to shortcut conflict.
    - Fix issue 793: Don't delete com.apple.ibooks.display-options.xml.
    - Fix issue 319: Adding chapter break in code view at end of current chapter creates new
      chapter before the current one.
    - Fix issue 947: Normalise headings before automatically generating the TOC.
    - Build system changes to accomidate the Windows SDK.
    - Remove empty styles on body tags when cleaning webkit junk.
    - Fix  issue 549 : Split on SGF Chapter Markers puts new files (sections) at end of file list.
    - Fix issue 869: Right-click in Code View with error in code shows error dialog.
    - Fix issue 919 and issue 316: Replace potentially problematic characters with named or
      numerical entities.
    - Change About to include an authors section.
    - Fixed and issue where chapter splitting loses some chapters, places others in wrong order
      (issue 836).
    - Fixed an issue where language was not being properly detected (issue 923).
    - Fixed an issue where font mangling caused file duplication (issue 932).
    - Fixed an issue where extra blank lines were left in the STYLE section (issue 937).
    - Fixed an issue where FlightCrew was reporting erroneous Resource is reachable but not present
      in OPF errors (issue 813).
    - Fixed string format compile warnings (issue 892).
    - Fixed GCC 4.6 compile failure (issue 864).
    - Changed Save As shortcut key to Ctrl+Shift+S (issue 838).
    - Fixed an issue where the shortcut keys were not working properly on OS X (issue 838).
    - Fixed an issue where metadata changed in metadata editor unsaved if Sigil closed right after
      (issue 930).